--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -87,3 +87,7 @@
 
   </div>
 </div>
+
+<button mat-fab class="add-todo-fab" matTooltip="Add Todo" matTooltipPosition="left" routerLink="/todos/new">
+  <mat-icon class="md-24" aria-label="Add Todo">add</mat-icon>
+</button>
