--- a/client/src/app/todos/add-todo.component.html
+++ b/client/src/app/todos/add-todo.component.html
@@ -1,22 +1,66 @@
-<div fxlayout="row">
-    <div fxFlex fxFles.gt-sm="80" fxFlexOffset.gt-sm="10">
-        <form [formGroup]="addTodoForm" (ngSubmit)="submitForm();">
+<div fxLayout="row">
+  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
+    <form [formGroup]="addTodoForm" (ngSubmit)="submitForm();">
+      <mat-card class="add-todo-card">
         <mat-card-header>
-            <mat-card-title class="add-todo-title">New Todo</mat-card-title>
+          <mat-card-title class="add-todo-title">New Todo</mat-card-title>
         </mat-card-header>
         <mat-card-content fxLayout="column">
-            <mat-form-field>
-                <mat-label>Owner</mat-label>
-                <input matInput id="ownerField" placeholder="Owner" formControlName="owner"
-                required>
-                <mat-error *ngFor="let validation of add_todo_validation.owner">
-                    <mat-error class="error-message" id="owner-error"
-                    *ngIf="addTodoForm.get('owner').hasError(validation.type) && (addTodoForm.get('owner').dirty || addTodoForm.get('name').touched)">
+          <mat-form-field>
+            <mat-label>Owner</mat-label>
+            <input matInput id="ownerField" placeholder="Owner" formControlName="owner" required>
+            <mat-error *ngFor="let validation of add_todo_validation_messages.owner">
+              <mat-error class="error-message" id="owner-error"
+                *ngIf="addTodoForm.get('owner').hasError(validation.type) && (addTodoForm.get('owner').dirty || addTodoForm.get('owner').touched)">
                 {{validation.message}}
-                </mat-error>
-                </mat-error>
-            </mat-form-field>
+              </mat-error>
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Body</mat-label>
+            <input matInput #input id="bodyField" placeholder="Body" formControlName="body" required>
+            <mat-error *ngFor="let validation of add_todo_validation_messages.body">
+              <mat-error class="error-message" id="body-error"
+                *ngIf="addTodoForm.get('body').hasError(validation.type) && (addTodoForm.get('body').dirty || addTodoForm.get('body').touched)">
+                {{validation.message}}
+              </mat-error>
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Category</mat-label>
+            <input matInput #input id="categoryField" placeholder="Category" formControlName="category" required>
+            <mat-error *ngFor="let validation of add_todo_validation_messages.category">
+              <mat-error class="error-message" id="category-error"
+                *ngIf="addTodoForm.get('category').hasError(validation.type) && (addTodoForm.get('category').dirty || addTodoForm.get('category').touched)">
+                {{validation.message}}
+              </mat-error>
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Status</mat-label>
+            <mat-select matNativeControl placeholder="Select a Status" formControlName="status" required>
+              <mat-option value="Incomplete">Incomplete</mat-option>
+              <mat-option value="Complete">Complete</mat-option>
+            </mat-select>
+            <mat-error *ngIf="addTodoForm.get('status').hasError('required')">You must make a selection</mat-error>
+            <mat-error
+              *ngIf="addTodoForm.get('status').hasError('pattern') && !addTodoForm.get('status').hasError('required')">
+              Your selection is invalid
+            </mat-error>
+          </mat-form-field>
+
         </mat-card-content>
-        </form>
-    </div>
+        <mat-card-actions align="end">
+          <button mat-button id="confirmAddTodoButton" type="button" color="primary" 
+            [disabled]="!addTodoForm.valid"
+            type="submit">
+            ADD TODO
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </form>
+  </div>
 </div>
