--- a/client/src/app/todos/todo-list.component.scss
+++ b/client/src/app/todos/todo-list.component.scss
@@ -2,10 +2,16 @@
 [hidden] {
   display: none !important;
 }
+
 .limit-select-form-field {
   margin-left: auto;
   margin-right: 0;
 }
+
+.mat-radio-button {
+  margin: 0 12px;
+}
+
 .add-todo-fab {
   position: fixed;
   bottom: 15px;
