--- a/client/src/app/todos/add-todo.component.html
+++ b/client/src/app/todos/add-todo.component.html
@@ -41,14 +41,15 @@
 
           <mat-form-field>
             <mat-label>Status</mat-label>
-            <mat-select matNativeControl placeholder="Select a Status" formControlName="status" required>
-              <mat-option value="Incomplete">Incomplete</mat-option>
-              <mat-option value="Complete">Complete</mat-option>
+            <mat-select matInput id="statusField" formControlName="status" required>
+              <mat-option value="incomplete">Incomplete</mat-option>
+              <mat-option value="complete">Complete</mat-option>
             </mat-select>
-            <mat-error *ngIf="addTodoForm.get('status').hasError('required')">You must make a selection</mat-error>
-            <mat-error
-              *ngIf="addTodoForm.get('status').hasError('pattern') && !addTodoForm.get('status').hasError('required')">
-              Your selection is invalid
+            <mat-error *ngFor="let validation of add_todo_validation_messages.status">
+              <mat-error class="error-message" id="status-error"
+              *ngIf="addTodoForm.get('status').hasError(validation.type) && (addTodoForm.get('status').dirty || addTodoForm.get('status').touched)">
+              {{validation.message}}
+            </mat-error>
             </mat-error>
           </mat-form-field>
 
