--- a/client/src/app/todos/add-todo.component.html
+++ b/client/src/app/todos/add-todo.component.html
@@ -42,8 +42,8 @@
           <mat-form-field>
             <mat-label>Status</mat-label>
             <mat-select matInput id="statusField" formControlName="status" required>
-              <mat-option value="Incomplete">Incomplete</mat-option>
-              <mat-option value="Complete">Complete</mat-option>
+              <mat-option value=false>Incomplete</mat-option>
+              <mat-option value=true>Complete</mat-option>
             </mat-select>
             <mat-error *ngFor="let validation of add_todo_validation_messages.status">
               <mat-error class="error-message" id="status-error"
@@ -55,7 +55,7 @@
 
         </mat-card-content>
         <mat-card-actions align="end">
-          <button mat-button id="confirmAddTodoButton" type="button" color="primary" 
+          <button mat-button id="confirmAddTodoButton" type="button" color="primary"
             [disabled]="!addTodoForm.valid"
             type="submit">
             ADD TODO
