Make adjustments to form to correctly submit, e2e testing

--- a/client/src/app/todos/todo-list.component.html
+++ b/client/src/app/todos/todo-list.component.html
@@ -42,8 +42,8 @@
             <mat-label>Status</mat-label>
             <mat-select (selectionChange)="getTodosFromServer()" [(ngModel)]="todoStatus" id="todo-status-select">
               <mat-option>--</mat-option>
-              <mat-option value="complete">Complete</mat-option>
-              <mat-option value="incomplete">Incomplete</mat-option>
+              <mat-option value="Complete">Complete</mat-option>
+              <mat-option value="Incomplete">Incomplete</mat-option>
             </mat-select>
             <mat-hint>Filtered on the server</mat-hint>
           </mat-form-field>
